Improving the installation, query and updating of the python module from within R.
Removed the tie to a specific version of MetaWards. However, this will now mean
that this will work only for MetaWards 1.4 and above (not released yet - currently
the devel branch)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,6 @@
 export(metawards)
 export(py_install_metawards)
 export(py_metawards_available)
+export(py_metawards_update_available)
+export(py_update_metawards)
 export(py_version_metawards)
